<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="login">Login </string>
    <string name="tagline">Money management made simple</string>
    <string name="signup_tag">No account yet? Create one</string>
    <string name="login_tag">Already have an account? Login</string>
    <string name="signup"> Sign up </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>spinner_bargraph

    <string name="action_settings">Settings</string>

    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pie">PieActivity</string>

    <string-array name="spinner_bargraph">
        <item>Day</item>
        <item>Month</item>
    </string-array>
    <string name="title_activity_expense">ExpenseActivity</string>

</resources>
