<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = ".SignupActivity">

    <TextView
        android:id="@+id/tagLine"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        android:text="@string/tagline"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagLine"
        android:layout_alignLeft="@+id/email_id"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/email_id"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_id"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd"
        android:layout_marginBottom="30dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/login_tag" />

</RelativeLayout>