<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = ".LoginActivity">

    <TextView
        android:id="@+id/tagLine"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:text=""
        android:textSize="18dp" />
    <TextView
        android:id="@+id/tagLine1"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/tagline"
        android:textSize="18dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/email_id"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false"
        android:scaleType="fitXY"
        android:src="@drawable/icons" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagLine"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_id"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pwd"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignRight="@+id/pwd"
        android:layout_alignStart="@+id/pwd"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="31dp"
        android:background="#fff"
        android:text="@string/login" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/signup_tag" />

</RelativeLayout>